--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="encabezado">
       <h2>Instituto Gubernamental</h2>
       <h2>PRIMERO DE MAYO</h2>
-      <h3>Col. Fesitranh, S.P.S.</h3>
+      <h3>Col. Fesitranh, SPS</h3>
     </div>
   </header>
 
